# derivepass-vue

./: .gitignore  README.md  index.html  manifest.json  now.json  package-lock.json  package.json  precache-manifest.06a588a5bade05587d749817be59cf17.js  service-worker.js  vue.config.js
css/: app.865af462.css  chunk-vendors.3ce0e8f7.css
electron/: main.js  package-lock.json  package.json  preload.js
js/: app.53686da7.js  app.53686da7.js.map  chunk-vendors.e0713af0.js  chunk-vendors.e0713af0.js.map
public/: empty-precache-manifest.js  index.html  manifest.json
src/: App.vue  i18n.js  main.js  presets.js  registerServiceWorker.js  routes.js  service-worker.js
src/components/: app-list.vue  cloud-kit.vue  computing.vue  emoji-hash.vue  fancy-logo.vue  master-password.vue  nav-bar.vue  qr-duplex.vue  qr-feed.vue  qr-receive.vue  qr-send.vue  qr.vue  tutorial.vue
src/electron/: main.js  preload.js
src/layouts/: default.vue
src/locales/: ca.json  en.json  ru.json
src/pages/: about.vue  application-list.vue  application.vue  applications.vue  home.vue  index.vue  master-password.vue  settings.vue  sync.vue
src/plugins/: index.js
src/plugins/derivepass/: index.js  (+1 more)
src/store/: actions.js  getters.js  index.js  mutations.js  state.js
src/utils/: cloud-kit-api.js  cloud-kit-provider.js  cloud-kit.js  cloudkit.js  common.js  crypto.js  derivepass.js  derivepass.worker.js  emoji-hash.js  feature-test.js  qr-bloom.js
src/wasm/: .gitignore  Cargo.toml  README.md
src/wasm/src/: lib.rs
tests/fixtures/: polyfill.js
tests/unit/: common.spec.js  crypto.spec.js
(+17 files in other folders)
