[package]
name = "derivepass"
description = "derivepass bindings"
version = "1.0.1"
authors = ["Fedor Indutny <fedor@indutny.com>"]
categories = ["cryptography"]
keywords = ["crypto","scrypt"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]

[dependencies]
dumb-crypto = "^3.0.0"
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
